# nmrs

./: .coderabbit.yaml  .coderabbit.yml  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PKGBUILD  README.md  SECURITY.md  default.nix  docker-compose.yml  flake.nix  nmrs.desktop  package.nix
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/instructions/: *.instructions.md
.github/workflows/: ci.yml  contributors.yml  docs.yml  nix.yml  publish-lib.yml  release-gui.yml  release.yml
docs/: README.md  add-page.sh  book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: async-runtimes.md  connection-options.md  dbus.md  logging.md  timeouts.md
docs/src/api/: builders.md  errors.md  models.md  network-manager.md  types.md
docs/src/appendix/: changelog.md  faq.md  license.md  troubleshooting.md
docs/src/development/: architecture.md  contributing.md  releases.md  testing.md
docs/src/examples/: connection-manager.md  enterprise-wifi.md  network-monitor.md  openvpn-client.md  ovpn-import.md  wifi-auto-connect.md  wifi-scanner.md  wireguard-client.md
docs/src/getting-started/: installation.md  quick-start.md  requirements.md
docs/src/gui/: configuration.md  installation.md  overview.md  themes.md  waybar.md
docs/src/guide/: bluetooth.md  devices.md  error-handling.md  ethernet.md  monitoring.md  profiles.md  vpn-management.md  vpn-openvpn.md  vpn-wireguard.md  vpn.md  wifi-connecting.md  wifi-enterprise.md  wifi-hidden.md  wifi-per-device.md  wifi-scanning.md  wifi-wpa-psk.md  wifi.md
docs/theme/: custom.css
mmrs/: CHANGELOG.md  Cargo.toml  README.md
mmrs/src/: lib.rs
mmrs/src/api/: mod.rs
mmrs/src/api/models/: bearer.rs  error.rs  mod.rs  modem.rs  sim.rs
mmrs/src/dbus/: bearer.rs  manager.rs  mod.rs  modem.rs  modem_simple.rs  sim.rs
netrs-core/: Cargo.toml
netrs-core/src/: config.rs  dbus.rs  lib.rs  models.rs
netrs-core/tests/: dbus_tests.rs  models_tests.rs
netrs-ui/: Cargo.toml
netrs-ui/src/: main.rs  style.css  style.rs
netrs-ui/src/ui/: connect.rs  device_list.rs  header.rs  mod.rs  networks.rs  sidebar.rs  window.rs
nmrs/: CHANGELOG.md  Cargo.toml  README.md
nmrs-core/: Cargo.toml
nmrs-core/src/: connection.rs  connection_settings.rs  constants.rs  dbus.rs  device.rs  lib.rs  models.rs  network_info.rs  network_manager.rs  proxies.rs  scan.rs  state_wait.rs  utils.rs  wifi_builders.rs
nmrs-core/tests/: integration_test.rs  models_test.rs  wifi_buillders_test.rs
nmrs-gui/: CHANGELOG.md  Cargo.toml  build.rs
nmrs-gui/src/: file_lock.rs  lib.rs  main.rs  style.css  style.rs  theme_config.rs
nmrs-gui/src/objects/: theme.rs
nmrs-gui/src/themes/: catppuccin.css  dracula.css  gruvbox.css  nord.css  tokyo.css
nmrs-gui/src/ui/: connect.rs  header.rs  mod.rs  network_page.rs  networks.rs  settings_page.rs  wired_devices.rs  wired_page.rs
nmrs-gui/tests/: applock_test.rs  smoke_test.rs  style_test.rs
nmrs-ui/: Cargo.toml
nmrs-ui/src/: lib.rs  main.rs  style.css  style.rs  theme_config.rs
nmrs-ui/src/themes/: dracula.css  gruvbox.css  nord.css  tokyo.css
nmrs-ui/src/ui/: connect.rs  header.rs  mod.rs  network_page.rs  networks.rs
nmrs-ui/tests/: smoke_test.rs  style_test.rs
nmrs/examples/: airplane_mode.rs  ap_list.rs  bluetooth.rs  bluetooth_connect.rs  connectivity.rs  custom_timeouts.rs  multi_wifi.rs  saved_list.rs  secret_agent.rs  vpn_connect.rs  vpn_list.rs  wifi_enterprise.rs  wifi_scan.rs
nmrs/src/: connection.rs  connection_settings.rs  constants.rs  device.rs  device_monitor.rs  lib.rs  models.rs  network_info.rs  network_manager.rs  network_monitor.rs  scan.rs  state_wait.rs  utils.rs  wifi_builders.rs
nmrs/src/agent/: builder.rs  iface.rs  mod.rs  request.rs
nmrs/src/api/: mod.rs  models.rs  network_manager.rs  wifi_scope.rs
nmrs/src/api/builders/: bluetooth.rs  connection_builder.rs  mod.rs  openvpn_builder.rs  vlan.rs  vpn.rs  wifi.rs  wifi_builder.rs  wireguard_builder.rs
nmrs/src/api/models/: access_point.rs  bluetooth.rs  config.rs  connection_state.rs  connectivity.rs  device.rs  error.rs  mod.rs  openvpn.rs  radio.rs  saved_connection.rs  state_reason.rs  tests.rs  vlan.rs  vpn.rs  wifi.rs  wireguard.rs
nmrs/src/core/: airplane.rs  bluetooth.rs  connection.rs  connection_settings.rs  connectivity.rs  device.rs  mod.rs  opvpn_parser.rs  rfkill.rs  saved_connection.rs  scan.rs  state_wait.rs  vpn.rs  wifi_device.rs
nmrs/src/core/ovpn_parser/: error.rs  mod.rs  parser.rs
nmrs/src/dbus/: access_point.rs  active_connection.rs  agent_manager.rs  bluetooth.rs  bluez_adapter.rs  device.rs  main_nm.rs  mod.rs  settings.rs  settings_connection.rs  wired.rs  wireless.rs
nmrs/src/monitoring/: bluetooth.rs  device.rs  info.rs  mod.rs  network.rs  transport.rs  wifi.rs
nmrs/src/proxies/: device.rs  main_nm.rs  mod.rs  wired.rs  wireless.rs
nmrs/src/types/: constants.rs  device_type_registry.rs  mod.rs
nmrs/src/util/: cert_store.rs  mod.rs  test_utils.rs  utils.rs  validation.rs
nmrs/tests/: integration_test.rs  validation_test.rs
scripts/: README.md  bump_version.py  extract_release_notes.py  install-hooks.sh  pre-commit
