[workspace]
members = [
  "nmrs", 
  "nmrs-gui"
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/cachebag/nmrs"

[workspace.lints.rust]
unsafe_code = "forbid"
# This shouldn't apply to nmrs-gui
# missing_docs = "warn"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Allow some common patterns
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.dependencies]
# Core dependencies
zbus = "5.12.0"
zvariant = "5.8.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4", "v5"] }
futures = "0.3.31"
futures-timer = "3.0.3"
base64 = "0.22.1"

tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
