[workspace]
members = [
  "nmrs", 
  "nmrs-gui"
]

resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/cachebag/nmrs"

[workspace.lints.rust]
# This shouldn't apply to nmrs-gui
# missing_docs = "warn"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Allow some common patterns
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.dependencies]
# Core dependencies
zbus = "5.15.0"
zvariant = "5.10.1"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4", "v5"] }
futures = "0.3.32"
futures-timer = "3.0.3"
base64 = "0.22.1"
nmrs = { path = "nmrs", version = "3.0" }
gtk = { version = "0.11.3", package = "gtk4" }
glib = "0.22.6"
dirs = "6.0.0"
fs2 = "0.4.3"
anyhow = "1.0.102" 
clap = { version = "4.6.1", features = ["derive"] }
async-trait = "0.1.89"
bitflags = "2.11.1"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { version = "0.7.18" }
