# netrs-core/Cargo.toml
[package]
name = "netrs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
zbus = "5.11.0"
zvariant = "5.7.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1.41"
tokio = "1.47.1"
async-io = "2.6.0"
futures-timer = "3.0.3"
futures-util = "0.3.31"
neli = "0.7.1"
if-addrs = "0.14.0"
ipnetwork = "0.21.1"
