[package]
name = "nmrs-core"
version = "0.1.1"
edition = "2024"

[dependencies]
zbus = "5.11.0"
zvariant = "5.7.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1.41"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-io = "2.6.0"
futures-timer = "3.0.3"
futures-util = "0.3.31"
neli = "0.7.1"
if-addrs = "0.14.0"
ipnetwork = "0.21.1"
uuid = { version = "1.18.1", features = ["v4"] }
