[package]
name = "nmrs-gui"
version = "0.5.0"
edition = "2024"

[dependencies]
log = "0.4.29"
nmrs = { path = "../nmrs" }
tokio = { version = "1.48.0", features = ["full"] }
gtk = { version = "0.10.3", package = "gtk4" }
glib = "0.21.5"
dirs = "6.0.0"
fs2 = "0.4.3"
anyhow = "1.0.100" 
clap = { version = "4.5.53", features = ["derive"] }
