[package]
name = "nmrs-gui"
version = "0.5.0"
authors = ["Akrm Al-Hakimi <alhakimiakrmj@gmail.com>"]
edition.workspace = true
rust-version = "1.85.1"
description = "GTK4 GUI for managing NetworkManager connections"
license.workspace = true
repository.workspace = true
keywords = ["networkmanager", "gui", "gtk", "linux"]
categories = ["gui"]

[dependencies]
nmrs = { path = "../nmrs", version = "1.0.0" }
gtk = { version = "0.10.3", package = "gtk4" }
glib = "0.21.5"
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.29"
dirs = "6.0.0"
fs2 = "0.4.3"
anyhow = "1.0.100" 
clap = { version = "4.5.53", features = ["derive"] }
