[package]
name = "nmrs-gui"
version = "1.1.0"
authors = ["Akrm Al-Hakimi <alhakimiakrmj@gmail.com>"]
edition.workspace = true
rust-version = "1.85.1"
description = "GTK4 GUI for managing NetworkManager connections"
license.workspace = true
repository.workspace = true
keywords = ["networkmanager", "gui", "gtk", "linux"]
categories = ["gui"]
publish = false

[dependencies]
nmrs.workspace = true  
gtk.workspace = true 
glib.workspace = true 
tokio.workspace = true
log.workspace = true 
dirs.workspace = true 
fs2.workspace = true 
anyhow.workspace = true  
clap.workspace = true 
tokio-util.workspace = true
