[package]
name = "nmrs-ui"
version = "0.4.0"
edition = "2024"

[dependencies]
nmrs-core = { path = "../nmrs-core" }
tokio = { version = "1.47.1", features = ["full"] }
gtk = { version = "0.10.1", package = "gtk4" }
glib = "0.21.3"
dirs = "6.0.0"
fs2 = "0.4.3"
anyhow = "1.0.100" 
clap = { version = "4.5.53", features = ["derive"] }
