[package]
name = "nmrs"
version = "2.0.0-dev"
authors = ["Akrm Al-Hakimi <alhakimiakrmj@gmail.com>"]
edition.workspace = true
rust-version = "1.78.0"
description = "A Rust library for NetworkManager over D-Bus"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/nmrs"
keywords = ["networkmanager", "dbus", "wifi", "linux", "networking"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
log.workspace = true
zbus.workspace = true
zvariant.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures.workspace = true
futures-timer.workspace = true
base64.workspace = true
tokio.workspace = true
async-trait.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[lib]
bench = false

[[example]]
name = "wifi_scan"
path = "examples/wifi_scan.rs"

[[example]]
name = "vpn_connect"
path = "examples/vpn_connect.rs"
